--- a/css.css
+++ b/css.css
@@ -36,6 +36,11 @@ input{
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     width: 50%;
 }
+@media only screen and (max-width: 1000px) {
+    .row{
+      width: 100%;
+    }
+}
 body{
     background-color:rgb(48, 41, 41);
 }
